# H4ck-2026

./: .env  .gitignore  CODE_OF_CONDUCT.MD  LICENSE  README.md  docker-compose.local.yml  docker-compose.yml
.github/: git-commit-instructions.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: utils.py
backend/app/api/v1/endpoints/: categories.py  ia.py  items.py  telegram.py
backend/app/core/: config.py  database.py
backend/app/crud/: base.py
backend/app/model/: base.py  category.py  enums.py  itemcategorylink.py  items.py  message.py
backend/app/scripts/: load_categories.py  seed.py
backend/app/service/: category_service.py  ia_service.py  item_service.py  link_preview_service.py
frontend/: .dockerignore  Dockerfile  biome.json  index.html  package.json  tsconfig.json  vite.config.ts
frontend/public/: data.json
frontend/src/: App.tsx  Layout.tsx  index.css  main.tsx
frontend/src/app/: atoms.ts
frontend/src/app/api/: appFetch.ts  categories.service.ts  index.ts  items.service.ts
frontend/src/app/atoms/: composer.ts  filters.ts  index.ts  link-viewer.ts  mobile-view.ts
frontend/src/app/components/: AuthButton.tsx  ConfirmActionModal.tsx  DataItemCard.tsx  DataItemsList.tsx  ErrorModal.tsx  ErrorModalProvider.tsx  LeftFiltersSidebar.tsx  LinkIframeModal.tsx  PageTransition.tsx  RightWorkbenchSidebar.tsx  Sidebar.tsx  index.tsx  (+6 more)
frontend/src/layout/: DesktopLayout.tsx  MobileLayout.tsx  TabletLayout.tsx  types.ts  useViewportMode.ts
frontend/src/router/: routes.tsx
frontend/src/user/: hooks.ts
(+69 files in other folders)
